--- a/README
+++ b/README
@@ -3,4 +3,4 @@ http://crunchalert.com
 
 CrunchAlert = email alerts on CrunchBase updates.
 
-Because you're obsessed with tech as much as I am. Be the first to know what your favorite startups, or competitors, and tech people are up to by getting email alerts on them.
+Because you're obsessed with all things tech/startup too. Be the first to know what your favorite startups, or competitors, and tech people are up to by getting email alerts on them.
